Ch. word embeddings

--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -532,4 +532,22 @@
   year   = {2014},
 }
 
+@InProceedings{Mikolovb2013,
+  author = {Tomas Mikolov and Jeffrey Dean},
+  title  = {Efficient Estimation of Word Representations in Vector Space},
+  year   = {2013},
+}
+
+@InProceedings{Gutmann2012,
+  author = {Michael U. Gutmann},
+  title  = {Noise-Contrastive Estimation of Unnormalized Statistical Models, with Applications to Natural Image Statistics},
+  year   = {2012},
+}
+
+@InProceedings{Matthew2018,
+  author = {Matthew E. Peters and Mark Neumann},
+  title  = {Deep contextualized word representations},
+  year   = {2018},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
