Corrección errores abstract

--- a/Plantilla TFM.tex
+++ b/Plantilla TFM.tex
@@ -211,9 +211,9 @@ Finalmente, se ha realizado una evaluación exhaustiva del sistema de clasificaci
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter*{Abstract}
 \label{sec:Abstract}
-\noindent The present work defines a new architecture to detect sexism at Twitter. The main goal is to understand the mechanism and textual signals which imply sexist attitudes or language of this kind in spanish. We create a new corpus which contains text with expressions and sexist attitudes using the social network Twitter as main datasource. To create the corpus, a specific tool is developed to collect all the messages created at Twitter containing certains terms related to sexist attitudes. We search for expressions which underestimate the role of women in our society, encourage the harassment towards them or limit their freedom of speech. There are many expressions used in a daily basis that underestimate the role of women in society. Terms such as ``feminazi'', ``niñata'' o ``a fregar'' have been used to collect tweets in our corpus. We also develop a classification system which allows us to identify sexist language in an automatic way. The system employs several machine learning algorithms and establish two baselines used as reference points for the system's evaluation.
+\noindent The present work defines a new architecture to detect sexism at Twitter. The main goal is to understand the mechanism and textual signals which imply sexist attitudes or language of this kind in spanish. We create a new corpus which contains text with sexist expressions using the social network Twitter as main datasource. To create the corpus, a specific tool is developed to collect all the messages created at Twitter containing certains terms. We search for expressions which underestimate the role of women in our society, encourage the harassment towards them or limit their freedom of speech. There are many expressions used in a daily basis that underestimate the role of women in society. Terms such as ``feminazi'', ``niñata'' or ``a fregar'' have been used to collect tweets in our corpus. We also develop a classification system which allows us to identify sexist language in an automatic way. The system employs several machine learning algorithms and establish two baselines used as reference points for the system's evaluation.
 
-Finally, an extensive evaluation is perfomed on the corpus to determine the perform of our approach in the classification task. The results obtained shows this procedure is able to identify sexism properly in the corpus used. However, some limitations and problems have been detected due to the approach used.
+Finally, an extensive evaluation is perfomed on the corpus to determine the perform of our approach in the classification task. The results obtained show that this procedure is able to identify sexism properly in the corpus used. However, some limitations and problems have been detected due to the approach used.
 
 
 
@@ -272,7 +272,7 @@ Finally, an extensive evaluation is perfomed on the corpus to determine the perf
 \newpage
 \newpage
 %Eliminar si no hay todo's
-\listoftodos
+%\listoftodos
 
 
 \end{document}
